@@ -1,5 +1,8 @@
 [b]Version 0.5.62[/b] (not released yet):
 
+(2007-10-26)
+ * (Internal change) Renamed font_textscale in preferences to initial_sub_scale.
+
 (2007-10-25)
  * Now the -nostop-xscreensaver option is passed to mplayer if the screensaver
    is not to be disabled.
